--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -25,6 +25,8 @@ jobs:
             mongodb_version: '4.4'
           - molecule_distro: ubuntu2004
             mongodb_version: '5.0'
+          - molecule_distro: ubuntu2204
+            mongodb_version: '5.0'
     env:
       MONGODB_VERSION: ${{ matrix.mongodb_version }}
       MOLECULE_DISTRO: ${{ matrix.molecule_distro }}
