--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -18,7 +18,7 @@
 
 - name: Fail when used wrong mongodb_version variable
   fail:
-    msg: "mongodb_version variable should be '3.6' or '4.0', '4.2' or '4.4'"
+    msg: "mongodb_version variable should be '3.6' or '4.0', '4.2' or '4.4' or '5.0'"
   when: (mongodb_package == 'mongodb-org' and
         (mongodb_version is not defined
          or mongodb_repository[mongodb_major_version] is not defined))
