test fix for 22.04 apt key

--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -9,10 +9,18 @@
     - mongodb_disable_transparent_hugepages | bool
     - ansible_service_mgr == "systemd"
 
-- name: Add APT key
-  apt_key:
-    keyserver: "{{ mongodb_apt_keyserver if not mongodb_apt_key_from_url|bool else omit }}"
+# - name: Add APT key
+#   apt_key:
+#     keyserver: "{{ mongodb_apt_keyserver if not mongodb_apt_key_from_url|bool else omit }}"
+#     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
+#     id: "{{ mongodb_apt_key_id[mongodb_major_version] }}"
+#   when: mongodb_package == 'mongodb-org'
+
+# Fix for Ubuntu 22.04
+- name: Add APT key (new GPG method)
+  get_url:
     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
+    dest: "/etc/apt/trusted.gpg.d/mongodb-key.gpg"
     id: "{{ mongodb_apt_key_id[mongodb_major_version] }}"
   when: mongodb_package == 'mongodb-org'
 
