--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -20,7 +20,7 @@
 - name: Add APT key (new GPG method)
   get_url:
     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
-    dest: "/etc/apt/trusted.gpg.d/keyrings/mongodb-key.gpg"
+    dest: "/etc/apt/keyrings/mongodb-key.gpg"
   when: mongodb_package == 'mongodb-org'
 
 - name: Fail when used wrong mongodb_version variable
