--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -30,6 +30,14 @@
         (mongodb_version is not defined
          or mongodb_repository[mongodb_major_version] is not defined))
 
+# Fix Failed to update apt cache: unknown reason
+# https://github.com/ansible/ansible-modules-core/issues/2951#issuecomment-218327951
+- name: hack to resolve Problem with MergeList Issue
+  sudo: true
+  shell: 'find /var/lib/apt/lists -maxdepth 1 -type f -exec rm -v {} \;'
+
+- apt: update_cache=yes
+
 - name: Add APT repository
   apt_repository:
     repo: "{{ mongodb_repository[version_item] }}"
