--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -9,19 +9,26 @@
     - mongodb_disable_transparent_hugepages | bool
     - ansible_service_mgr == "systemd"
 
-- name: Add APT key
-  apt_key:
-    keyserver: "{{ mongodb_apt_keyserver if not mongodb_apt_key_from_url|bool else omit }}"
-    url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
-    id: "{{ mongodb_apt_key_id[mongodb_major_version] }}"
-  when: mongodb_package == 'mongodb-org'
+# - name: Add APT key
+#   apt_key:
+#     keyserver: "{{ mongodb_apt_keyserver if not mongodb_apt_key_from_url|bool else omit }}"
+#     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
+#     id: "{{ mongodb_apt_key_id[mongodb_major_version] }}"
+#   when: mongodb_package == 'mongodb-org'
 
 # Fix for Ubuntu 22.04
-# - name: Add APT key (new GPG method)
-#   get_url:
-#     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
-#     dest: "/etc/apt/keyrings/mongodb-key.gpg"
-#   when: mongodb_package == 'mongodb-org'
+- name: Add APT key (new GPG method)
+  get_url:
+    url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
+    dest: "/etc/apt/keyrings/mongodb-{{ mongodb_version }}-key.gpg"
+  when: mongodb_package == 'mongodb-org'
+
+# Fix Failed to update apt cache: unknown reason
+# https://github.com/ansible/ansible-modules-core/issues/2951#issuecomment-218327951
+- name: hack to resolve problem
+  become: true
+  shell: "apt-get clean; apt-get update"
+- apt: update_cache=yes
 
 - name: Fail when used wrong mongodb_version variable
   fail:
@@ -29,14 +36,6 @@
   when: (mongodb_package == 'mongodb-org' and
         (mongodb_version is not defined
          or mongodb_repository[mongodb_major_version] is not defined))
-
-# Fix Failed to update apt cache: unknown reason
-# https://github.com/ansible/ansible-modules-core/issues/2951#issuecomment-218327951
-- name: hack to resolve problem
-  become: true
-  shell: "apt-get clean; apt-get update"
-
-- apt: update_cache=yes
 
 - name: Add APT repository
   apt_repository:
