--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -17,11 +17,16 @@
 #   when: mongodb_package == 'mongodb-org'
 
 # Fix for Ubuntu 22.04
+# - name: Add APT key (new GPG method)
+#   get_url:
+#     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
+#     dest: "/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc"
+#   when: mongodb_package == 'mongodb-org'
 - name: Add APT key (new GPG method)
-  get_url:
-    url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
-    dest: "/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc"
-  when: mongodb_package == 'mongodb-org'
+  become: true
+  shell: 
+    - "wget -O mongodb-{{ mongodb_version }}-key.asc {{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
+    - "cat mongodb-{{ mongodb_version }}-key.asc | gpg --dearmor | sudo tee /usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg > /dev/null 2>&1"
 
 # Fix Failed to update apt cache: unknown reason
 # https://github.com/ansible/ansible-modules-core/issues/2951#issuecomment-218327951
