--- a/vars/Ubuntu.yml
+++ b/vars/Ubuntu.yml
@@ -1,10 +1,10 @@
 ---
 mongodb_repository:
-  "3.6": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/3.6 multiverse"
-  "4.0": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/4.0 multiverse"
-  "4.2": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/4.2 multiverse"
-  "4.4": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/4.4 multiverse"
-  "5.0": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/5.0 multiverse"
+  "3.6": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/3.6 multiverse"
+  "4.0": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/4.0 multiverse"
+  "4.2": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/4.2 multiverse"
+  "4.4": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/4.4 multiverse"
+  "5.0": "deb [signed-by=/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg] http://repo.mongodb.org/apt/ubuntu {{ ansible_distribution_release }}/mongodb-org/5.0 multiverse"
 
 mongodb_pymongo_package: "{{ 'python3-pymongo' if ansible_facts['python'].version.major == 3 else 'python-pymongo' }}"
 mongodb_pymongo_deps:
