--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -22,11 +22,10 @@
 #     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
 #     dest: "/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc"
 #   when: mongodb_package == 'mongodb-org'
+
 - name: Add APT key (new GPG method)
   become: true
-  shell:
-    - "wget -O mongodb-{{ mongodb_version }}-key.asc {{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
-    - "cat mongodb-{{ mongodb_version }}-key.asc | gpg --dearmor | sudo tee /usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg > /dev/null 2>&1"
+  shell: "wget -O mongodb-{{ mongodb_version }}-key.asc {{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }};cat mongodb-{{ mongodb_version }}-key.asc | gpg --dearmor | sudo tee /usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg > /dev/null 2>&1"
 
 - name: Fail when used wrong mongodb_version variable
   fail:
