--- a/tasks/install.debian.yml
+++ b/tasks/install.debian.yml
@@ -9,6 +9,7 @@
     - mongodb_disable_transparent_hugepages | bool
     - ansible_service_mgr == "systemd"
 
+# ORIGINAL
 # - name: Add APT key
 #   apt_key:
 #     keyserver: "{{ mongodb_apt_keyserver if not mongodb_apt_key_from_url|bool else omit }}"
@@ -16,16 +17,14 @@
 #     id: "{{ mongodb_apt_key_id[mongodb_major_version] }}"
 #   when: mongodb_package == 'mongodb-org'
 
-# Fix for Ubuntu 22.04
-# - name: Add APT key (new GPG method)
-#   get_url:
-#     url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
-#     dest: "/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc"
-#   when: mongodb_package == 'mongodb-org'
-
+# FIX for Ubuntu 22.04+
 - name: Add APT key (new GPG method)
-  become: true
-  shell: "wget -O mongodb-{{ mongodb_version }}-key.asc {{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }};cat mongodb-{{ mongodb_version }}-key.asc | gpg --dearmor | sudo tee /usr/share/keyrings/mongodb-{{ mongodb_version }}-key.gpg > /dev/null 2>&1"
+  get_url:
+    url: "{{ mongodb_apt_key_url[mongodb_major_version] if mongodb_apt_key_from_url|bool else omit }}"
+    dest: "/usr/share/keyrings/mongodb-{{ mongodb_version }}-key.asc"
+    mode: '0644'
+    force: true
+  when: mongodb_package == 'mongodb-org'
 
 - name: Fail when used wrong mongodb_version variable
   fail:
